<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/black"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mathsistor.m.calculator.CalculatorActivity">

    <TextView
        style="@style/display"
        android:id="@+id/result_display"
        android:text="0"
        android:background="@android:color/holo_green_dark"
        android:layout_marginBottom="5dp" />

    <TextView
        style="@style/display"
        android:id="@+id/operation_display"
        android:text=""
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/cal_button"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:backgroundTint="#232323"
                android:text="shift" />

            <Button
                style="@style/program"
                android:onClick="save"
                android:text="save" />

            <Button
                style="@style/program"
                android:textSize="14sp"
                android:onClick="restore"
                android:text="restore" />

            <Button
                style="@style/variable"
                android:id="@+id/set_M"
                android:onClick="setVariableM"
                android:text="→M" />

            <Button
                style="@style/variable"
                android:id="@+id/get_M"
                android:onClick="getVariableM"
                android:text="M" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:textSize="20sp"
                android:text="rand"
                android:backgroundTint="@android:color/holo_orange_dark" />

            <Button
                style="@style/trig"
                android:text="sin" />

            <Button
                style="@style/trig"
                android:id="@+id/cos_button"
                android:text="cos" />

            <Button
                style="@style/trig"
                android:text="tan" />

            <Button
                style="@style/cal_button"
                android:onClick="clearEverything"
                android:text="C"
                android:backgroundTint="@android:color/holo_red_light"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:text="xʸ"
                android:backgroundTint="@color/powers" />

            <Button
                style="@style/constant"
                android:id="@+id/pi_letter"
                android:text="π" />

            <Button
                style="@style/exponential"
                android:text="10ˣ" />

            <Button
                style="@style/exponential"
                android:text="log" />

            <Button
                style="@style/cal_button"
                android:text="undo"
                android:id="@+id/delete_undo"
                android:textSize="17dp"
                android:backgroundTint="?attr/colorAccent"
                android:textColor="@android:color/background_light"
                android:onClick="deleteOrUndo"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:text="∛"
                android:backgroundTint="@color/third_power" />

            <Button
                style="@style/constant"
                android:id="@+id/e_letter"
                android:text="e" />

            <Button
                style="@style/exponential"
                android:textSize="24sp"
                android:text="eˣ" />

            <Button
                style="@style/exponential"
                android:text="ln" />

            <Button
                style="@style/purple"
                android:id="@+id/multiplication_sign"
                android:text="×" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:text="x³"
                android:backgroundTint="@color/third_power" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_7"
                android:text="7" />

            <Button
                style="@style/digit"
                android:text="8" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_9"
                android:text="9" />

            <Button
                style="@style/purple"
                android:text="÷" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:id="@+id/square_root_symbol"
                android:text="√"
                android:backgroundTint="@color/second_power" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_4"
                android:text="4" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_5"
                android:text="5" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_6"
                android:text="6" />

            <Button
                style="@style/purple"
                android:id="@+id/plus_sign"
                android:text="+" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:text="x²"
                android:backgroundTint="@color/second_power" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_1"
                android:text="1" />

            <Button
                style="@style/digit"
                android:id="@+id/digit_2"
                android:text="2" />

            <Button
                style="@style/digit"
                android:text="3"
                android:id="@+id/digit_3" />

            <Button
                style="@style/purple"
                android:text="−" />

        </LinearLayout>

        <LinearLayout
            style="@style/horizontal">

            <Button
                style="@style/operation"
                android:text="x⁻¹"
                android:backgroundTint="@color/parenthesis" />
            <Button
                style="@style/digit"
                android:text="0" />


            <Button
                style="@style/cal_button"
                android:id="@+id/decimal_point"
                android:onClick="addDecimalPoint"
                android:text="." />

            <Button
                style="@style/operation"
                android:textSize="24sp"
                android:text="+/-" />

            <Button
                style="@style/purple"
                android:id="@+id/equal_sign"
                android:text="=" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
